fix header layout shift (origin css by naive cssr)

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -10,6 +10,7 @@ body,
 
 body {
   max-width: 1280px;
+  font-size: 14px;
 }
 
 html.dark {
